@@ -2,6 +2,7 @@
 
 	* snap.php: do not sort by the date: files are already sorted
 	* index.php: sdas and sdld instead asxxxx, reformatted, ...
+	* left_menu.inc: corrected html format
 
 2010-08-22 Borut Razem <borut.razem AT siol.net>
 
